--- a/style.css
+++ b/style.css
@@ -1,8 +1,24 @@
 header {
     width: 100%;
-    height: 100px;
+    height: 150px;
     background-color: aqua;
     text-align: center;
     font-size: 30px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+.rasm1{
+    width:  100px;
+margin-right: 100%;
+margin-top: auto;
+}
+.tab1{
+    margin: auto;
+}
+.img2{
+    width: 600px;
+}
+.tab2{
+    text-align: center;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
