--- a/style.css
+++ b/style.css
@@ -21,4 +21,12 @@ margin-top: auto;
 .tab2{
     text-align: center;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    width: 90%;
+    margin: auto;
+}
+.tab3{
+    text-align: center;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    width: 90%;
+    margin: auto;
 }
