--- a/style.css
+++ b/style.css
@@ -30,3 +30,12 @@ margin-top: auto;
     width: 90%;
     margin: auto;
 }
+.coaches{
+    width: 500px;
+}
+.tab4{
+    text-align: center;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    width: 90%;
+    margin: auto;
+}
